overflowing text issue

--- a/src/components/Feed/About.sass
+++ b/src/components/Feed/About.sass
@@ -6,11 +6,19 @@
     position: relative
 
 .ind_about
-    border-bottom: 0.1px solid lightgrey
-    float: left
     position: relative
-    overflow-wrap: anywhere
-    max-width: 92%
+    max-width: 100%
 
 .about_images
     width: 100%
+    
+
+.img_textContainer
+    position: absolute
+    top: 8px
+    left: 16px
+
+.img_text
+    color: rgba(255, 255, 255, 0.54)
+    height: 100px
+   
